manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: installscripts
  labels:
    name: installscripts
