manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: installscripts
  namespace: installscripts
  labels:
    app: installscripts
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: installscripts
  template:
    metadata:
      labels:
        app: installscripts
    spec:
      imagePullSecrets:
        - name: gitpullsecret
      containers:
      - name: installscripts
        image: ryzen.ryzen.me/ryzen/installscripts:latest
        ports:
        - containerPort: 8000
          protocol: TCP
